Fix: html, body 태그에  overflow, overscroll-behavior-y 속성 추가

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,11 @@ body {
     overscroll-behavior-y: contain;
 }
 
+html {
+    overflow: hidden;
+    overscroll-behavior-y: contain;
+}
+
 /*
 Copyright (c) 2021 Kil Hyung-jin, with Reserved Font Name Pretendard.
 https://github.com/orioncactus/pretendard
